BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/Marketing_SMSDefinition__c.object-meta.xml
<CustomObject>
    <label>Invio per dispositivo mobile</label>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>Nome Invio SMS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invii per dispositivo mobile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>