BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invii SMS</relationshipLabel>
    <relationshipName>InviiSMS</relationshipName>
    <type>Lookup</type>
</CustomField>