BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di invio</label>
    <type>DateTime</type>
</CustomField>