BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consegnato</label>
    <type>Checkbox</type>
</CustomField>