BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome mittente</label>
    <type>TextArea</type>
</CustomField>