BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/IsInbound__c.field-meta.xml
<CustomField>
    <fullName>IsInbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In entrata</label>
    <type>Checkbox</type>
</CustomField>