BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In uscita</label>
    <type>Checkbox</type>
</CustomField>