BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/MessageText__c.field-meta.xml
<CustomField>
    <fullName>MessageText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Testo del messaggio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>