BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Telefono cliente</label>
    <type>Phone</type>
</CustomField>