BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/SendStatus__c.field-meta.xml
<CustomField>
    <fullName>SendStatus__c</fullName>
    <formula>IF(Sent__c == true &amp;&amp; Delivered__c == false &amp;&amp; Undelivered__c == false, &quot;In corso&quot;,
			IF(Sent__c == true &amp;&amp; Delivered__c == true, &quot;Inviato&quot;,
						IF(Sent__c == true &amp;&amp; Undelivered__c == true, &quot;Fallito&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato di invio</label>
    <type>Text</type>
</CustomField>