BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inviato</label>
    <type>Checkbox</type>
</CustomField>