BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/ShortCode__c.field-meta.xml
<CustomField>
    <fullName>ShortCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice paese</label>
    <type>TextArea</type>
</CustomField>