BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/SMSName__c.field-meta.xml
<CustomField>
    <fullName>SMSName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome messaggio</label>
    <type>TextArea</type>
</CustomField>