BPER/DEVF/force-app/main/default/objects/Marketing_SMSDefinition__c/fields/Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Undelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non consegnato</label>
    <type>Checkbox</type>
</CustomField>